fix options x overflow

--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -195,8 +195,6 @@
 
 .addLibraryRow {
     display: inline-flex;
-    margin: 1em;
-    margin-bottom: 0;
     width: 100%;
 }
 
